# cmake_tutorial

./: .gitignore  CMakeLists.txt  README.md  main.cc
Adder/: CMakeLists.txt
Adder/include/: adder.h
Adder/src/: adder.cc
